# trafficcamnet_for_tensorrt

./: CMakeLists.txt  README.md  log.h  main.cpp
